--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>br.ufg.inf.es.dw</groupId>
-  <artifactId>20126321</artifactId>
+  <artifactId>Biografia_do_Romulo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <!-- Para aplicação web "standard" (JEE).-->
   <packaging>war</packaging>
